test/parsing/vass/wrong-unended-string-1.good
wrong-unended-string-1.chpl:2: error: EOF in string
wrong-unended-string-1.chpl:2: syntax error
